--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   api:
     build: .
-    container_name: fastapi_chinook_example
+    container_name: fastapi_locust_example
     ports:
       - "8000:8000"
